optimize: demo 前端工程代码结构调整

--- a/demo/demo-online-front/public/index.html
+++ b/demo/demo-online-front/public/index.html
@@ -13,6 +13,9 @@ Thanks for these great projects and technologies!
     <title>pan-light | 在线体验</title>
   </head>
   <body>
+  <script>
+      window.debugObj = window.debugObj || {}
+  </script>
     <noscript>
       <strong>We're sorry but demo-online-front doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
