--- a/demo/demo-online-front/public/index.html
+++ b/demo/demo-online-front/public/index.html
@@ -11,10 +11,12 @@ Thanks for these great projects and technologies!
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>pan-light | 在线体验</title>
+    <base href="https://qiniu-cdn.peterq.cn/pan-light/demo/">
   </head>
   <body>
   <script>
       window.debugObj = window.debugObj || {}
+      window.cdnPrefix = 'https://qiniu-cdn.peterq.cn/pan-light'
   </script>
     <noscript>
       <strong>We're sorry but demo-online-front doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
